--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "employment_cal",
   "version": "1.0.0",
   "description": "Employment Calendar",
-  "main": "theme.js",
+  "main": "theme.ts",
   "scripts": {
     "test": "jest",
     "build": "vite build",
@@ -17,6 +17,8 @@
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@rollup/plugin-html": "^1.0.2",
     "@rollup/plugin-replace": "^5.0.2",
+    "@types/bootstrap": "^5.2.10",
+    "@types/lodash": "^4.17.0",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "jest-localstorage-mock": "^2.4.26",
@@ -25,6 +27,7 @@
     "purgecss": "^5.0.0",
     "rollup-plugin-html-entry": "^0.3.0",
     "text-encoding": "^0.7.0",
+    "typescript": "^5.4.4",
     "vite": "^4.4.9",
     "vite-plugin-copy": "^0.1.6",
     "vite-plugin-html": "^3.2.0"
