--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@rollup/plugin-html": "^1.0.2",
     "@rollup/plugin-replace": "^5.0.2",
+    "@types/lodash": "^4.17.10",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
     "jest-localstorage-mock": "^2.4.26",
