--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
+    "@types/fullcalendar": "^3.8.0",
     "bootstrap": "^5.3.1",
     "lodash": "^4.17.21",
     "text-encoding-utf-8": "^1.0.2"
