--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@rollup/plugin-html": "^1.0.2",
     "@rollup/plugin-replace": "^5.0.2",
     "@types/bootstrap": "^5.2.10",
+    "@types/flatpickr": "^3.1.2",
     "@types/lodash": "^4.17.10",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4",
