--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@fullcalendar/timegrid": "^6.1.8",
     "bootstrap": "^5.3.1",
     "lodash": "^4.17.21",
-    "text-encoding-utf-8": "^1.0.2"
+    "text-encoding-utf-8": "^1.0.2",
+    "vite-plugin-remove-console": "^2.2.0"
   }
 }
