--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   "author": "Yevhen Stuzhuk",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.22.10",
+    "@babel/core": "^7.25.8",
     "@babel/plugin-syntax-top-level-await": "^7.14.5",
-    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-env": "^7.25.8",
+    "@babel/preset-react": "^7.25.7",
+    "@babel/preset-typescript": "^7.25.7",
     "@fullhuman/postcss-purgecss": "^5.0.0",
     "@rollup/plugin-html": "^1.0.2",
     "@rollup/plugin-replace": "^5.0.2",
-    "jest": "^29.6.4",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@types/bootstrap": "^5.2.10",
+    "@types/jest": "^29.5.13",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.6.4",
     "jest-localstorage-mock": "^2.4.26",
     "jsdom": "^22.1.0",
@@ -25,6 +32,8 @@
     "purgecss": "^5.0.0",
     "rollup-plugin-html-entry": "^0.3.0",
     "text-encoding": "^0.7.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.6.3",
     "vite": "^4.4.9",
     "vite-plugin-copy": "^0.1.6",
     "vite-plugin-html": "^3.2.0"
