--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,8 @@
         "moduleResolution": "node",
         "strict": true,
         "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "lib": ["es6", "dom"],
+        "types": ["jest", "node"]
     }
 }
