--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Employment Calendar",
   "main": "theme.js",
   "scripts": {
-    "test": "jest",
+    "test:unit": "jest",
+    "test:e2e": "playwright test",
     "build": "vite build",
     "start": "vite"
   },
@@ -17,6 +18,7 @@
     "@babel/preset-react": "^7.25.7",
     "@babel/preset-typescript": "^7.25.7",
     "@fullhuman/postcss-purgecss": "^5.0.0",
+    "@playwright/test": "^1.48.0",
     "@rollup/plugin-html": "^1.0.2",
     "@rollup/plugin-replace": "^5.0.2",
     "@testing-library/dom": "^10.4.0",
@@ -28,6 +30,7 @@
     "jest-environment-jsdom": "^29.6.4",
     "jest-localstorage-mock": "^2.4.26",
     "jsdom": "^22.1.0",
+    "playwright": "^1.48.0",
     "postcss": "^8.4.29",
     "purgecss": "^5.0.0",
     "rollup-plugin-html-entry": "^0.3.0",
