--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/jest-dom": "^6.5.0",
     "@types/bootstrap": "^5.2.10",
     "@types/jest": "^29.5.13",
+    "@types/lodash": "^4.17.10",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.6.4",
