--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test:unit": "jest",
     "test:e2e": "playwright test",
-    "build": "vite build",
+    "build": "vite build && node postbuild.js",
     "start": "vite"
   },
   "author": "Yevhen Stuzhuk",
