--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@fullcalendar/list": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
     "bootstrap": "^5.3.1",
+    "bootstrap-select": "^1.13.18",
+    "choices.js": "^11.0.2",
     "lodash": "^4.17.21",
     "text-encoding-utf-8": "^1.0.2",
     "vite-plugin-remove-console": "^2.2.0"
