--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.10",
+    "@types/toastify-js": "^1.12.3",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.6.4",
@@ -54,6 +55,7 @@
     "choices.js": "^11.0.2",
     "lodash": "^4.17.21",
     "text-encoding-utf-8": "^1.0.2",
+    "toastify-js": "^1.12.0",
     "vite-plugin-remove-console": "^2.2.0"
   }
 }
