--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@types/bootstrap": "^5.2.10",
+    "@types/flatpickr": "^3.1.4",
     "@types/jest": "^29.5.13",
     "@types/lodash": "^4.17.10",
     "@types/toastify-js": "^1.12.3",
