--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "strict": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "lib": ["es6", "dom"],
+        "lib": ["es6", "dom", "esnext"],
         "types": ["jest", "node"]
     }
 }
