--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test:unit": "jest",
     "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
     "build": "vite build && node postbuild.js",
     "start": "vite"
   },
